# healer

./: .gitattributes  .gitignore  Cargo.toml  README.md  Readme.md  build.rs  rustfmt.toml  sysgen.patch
.github/: auto-merge.yml
.github/workflows/: check.yml  ci-linux.yml  rust.yml
benches/: gen.rs
core/: Cargo.toml  analyze.rs  gen.rs  minimize.rs  mutate.rs  target.rs
core/src/: analyze.rs  c.rs  gen.rs  lib.rs  minimize.rs  mutate.rs  prog.rs  target.rs  value.rs
core/src/c/: cths.rs  mod.rs
descriptions/: grouped.fots  sys.fots  syscalls_all.fots  types.fots
docs/: hlang-spec.tex  issues.md
docs/crashes/: README.md
docs/crashes/5.10/_percpu_ref_exit-WARNING/: prog  qemu-log
docs/crashes/5.10/addr-null_ptr_deref/: prog  qemu-log
docs/crashes/5.10/kthread_stop-null_ptr_deref/: prog  qemu-log
docs/crashes/5.6/hung0/: prog  qemu-log
docs/crashes/5.6/hung1/: prog  prog.1  qemu-log  qemu-log.1
docs/crashes/5.6/null_ptr_deref/: prog  qemu-log
executor/: Cargo.toml  Readme.md  build.rs  exec.rs  executor.rs
executor/exec/: jit.rs
executor/picoc/: ffi.h  parse.c  picoc.h
executor/picoc/cstdlib/: ctype.c  sys.c  types.c  unistd.c
executor/picoc/platform/: library_surveyor.c
executor/src/: cover.rs  exec.rs  lib.rs  main.rs  picoc.rs  transfer.rs  utils.rs
executor/src/bind/: bind_unix.rs  mod.rs
executor/src/exec/: cths.rs  jit.rs  syscall.rs
executor/src/exec/interprete/: bind.rs  mod.rs  picoc.rs
executor/src/picoc/: include.c  interpreter.h  parse.c  platform.h
executor/src/picoc/cstdlib/: errno.c  fcntl.c  stdint.c  unistd.c
fots/: Cargo.toml  Readme.md
fots/examples/: foo.fots  syscall.fots
fots/src/: error.rs  fots.pest  grammar.rs  items.rs  lib.rs  num.rs  parse.rs  types.rs
fuzzer/: Cargo.toml  bg_task.rs  exec.rs  fuzzer.rs  gen.rs  guest.rs  lib.rs  mail.rs  main.rs  report.rs  repro.rs  stats.rs  target.rs  util.rs
fuzzer/benches/: gen.rs
fuzzer/exec/: comm.rs  mod.rs  qemu.rs  serialize.rs  ssh.rs  syz.rs  vm.rs
fuzzer/fuzz/: mod.rs
fuzzer/src/: corpus.rs  exec.rs  feedback.rs  fuzzer.rs  guest.rs  lib.rs  mail.rs  main.rs  qemu.rs  report.rs  ssh.rs  stats.rs
fuzzer/src/utils/: cli.rs  mod.rs  process.rs  queue.rs
fuzzer/syscalls/: mod.rs
fuzzer/syscalls/akaros/: amd64.rs  mod.rs
fuzzer/syscalls/freebsd/: _386.rs  amd64.rs  mod.rs
fuzzer/syscalls/fuchsia/: amd64.rs  arm64.rs  mod.rs
fuzzer/syscalls/linux/: mod.rs
fuzzer/syscalls/netbsd/: amd64.rs
fuzzer/syscalls/openbsd/: amd64.rs
fuzzer/syscalls/trusty/: arm.rs  mod.rs
fuzzer/syscalls/windows/: amd64.rs
fuzzer/utils/: mod.rs  process.rs  split.rs
healer-core/: Cargo.toml
healer-core/src/: len.rs  lib.rs  prog.rs  relation.rs
healer-core/src/mutation/: mod.rs
healer-core/src/ty/: buffer.rs  group.rs  int.rs  ptr.rs
healer-fuzzer/: Cargo.toml
healer-fuzzer/src/: main.rs
healer-utils/healer_alloc/src/: lib.rs
healer-utils/healer_vm/: Cargo.toml
healer_core/: Cargo.toml
healer_core/src/: alloc.rs  context.rs  corpus.rs  len.rs  lib.rs  prog.rs  relation.rs  select.rs  syscall.rs  target.rs  value.rs  value_pool.rs  verbose.rs
healer_core/src/mutation/: buffer.rs  call.rs  group.rs  int.rs  mod.rs  ptr.rs  res.rs  seq.rs
healer_core/src/parse/: mod.rs  prog.pest  prog_syntax.pest
healer_core/src/ty/: buffer.rs  common.rs  group.rs  int.rs  mod.rs  ptr.rs  res.rs
healer_fuzzer/: Cargo.toml
healer_fuzzer/src/: arch.rs  config.rs  crash.rs  feedback.rs  fuzzer.rs  fuzzer_log.rs  lib.rs  main.rs  stats.rs  util.rs
healer_utils/healer_alloc/: Cargo.toml
healer_utils/healer_io/: Cargo.toml
healer_utils/healer_io/src/: lib.rs  thread.rs  tokio.rs
healer_utils/healer_vm/: Cargo.toml
healer_utils/healer_vm/src/: lib.rs  qemu.rs
hl-spec/: Cargo.toml  error.rs  lib.rs  parse.rs  test.rs
hl-spec/util/: num.rs
hlang/: Cargo.toml  ast.rs  error.rs  lib.rs  parse.rs  sysgen.patch
hlang/ast/: mod.rs  types.rs  value.rs
hlang/util/: num.rs
old/core/: Readme.md  minimize.rs  value.rs
old/core/c/: cths.rs
old/descriptions/: sys.fots
old/executor/: executor.rs  lib.rs
old/executor/exec/: syscall.rs
old/fots/src/: errors.rs  fots.pest  num.rs  types.rs
old/fuzzer/: Cargo.toml  corpus.rs  exec.rs  guest.rs  stats.rs
old/fuzzer/utils/: cli.rs  split.rs
old/tools/src/: def2flag.rs
patches/: executor.diff  features.h  ivshm_setup.h  sysgen.diff  targets.diff
src/: lib.rs  main.rs
src/exec/: comm.rs  mod.rs  qemu.rs  serialize.rs  ssh.rs  syz.rs
src/fuzz/: features.rs  fuzzer.rs  input.rs  log.rs  mod.rs  mutation.rs  queue.rs  relation.rs  repro.rs  stats.rs
src/model/: mod.rs  types.rs  value.rs
src/targets/: mod.rs  sys_json.rs  syscalls.rs
src/utils/: bg_task.rs  io.rs  mod.rs  ssh.rs  tokio_rt.rs
src/vm/: mod.rs  null.rs  qemu.rs
syscalls/: Cargo.toml  README.md  lib.rs  sysgen.patch  syzgen.patch
syscalls/akaros/: amd64.rs
syscalls/freebsd/: _386.rs  amd64.rs
syscalls/fuchsia/: amd64.rs  arm64.rs
syscalls/netbsd/: amd64.rs
syscalls/openbsd/: amd64.rs
syscalls/trusty/: arm.rs
syscalls/windows/: amd64.rs
syz-wrapper/: Cargo.toml
syz-wrapper/benches/: gen.rs
syz-wrapper/patches/: features.h  ivshm_setup.h  sysgen.diff  targets.diff
syz-wrapper/src/: crash.rs
syz_wrapper/: Cargo.toml  build.rs
syz_wrapper/benches/: gen.rs  mutate.rs
syz_wrapper/patches/: executor.diff  ivshm_setup.h  unix_sock_setup.h
syz_wrapper/src/: lib.rs  report.rs  repro.rs
syz_wrapper/src/exec/: features.rs  message.rs  mod.rs  serialization.rs  util.rs
syz_wrapper/src/sys/: convert.rs  mod.rs
tools/: Cargo.toml
tools/gen-prog/: Cargo.toml
tools/gen_prog/: Cargo.toml
tools/gen_prog/src/: main.rs
tools/hlc/: Cargo.toml  constant.rs  lib.rs  main.rs  syz.pest
tools/hlc/src/: lib.rs
tools/inspect-target/: Cargo.toml
tools/inspect_target/: Cargo.toml
tools/inspect_target/src/: main.rs
tools/minimize/: Cargo.toml
tools/minimize/src/: main.rs
tools/mutate_prog/: Cargo.toml
tools/mutate_prog/src/: main.rs
tools/src/: def2flag.rs  defs.pest  lib.rs
(+44 files in other folders)
