[workspace]
members = [
    "healer-core",
    "healer-fuzzer",
    "syz-wrapper",

    # utils 
    "healer-utils/healer_alloc",
    "healer-utils/healer_vm",
    "healer-utils/healer_io",
    
    # tools mainly for debug purpose 
    "tools/inspect-target",
    "tools/gen-prog"
]

[profile.release]
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
codegen-units = 1
opt-level = 3

[profile.test]
opt-level = 3    