[package]
name = "core"
version = "0.1.0"
authors = ["sam <sunhaoyl@outlook.com>"]
edition = "2018"
description = "Program generation, mutation, minimiation of healer"
license = "Apache-2.0"

[dependencies]
fots={path="../fots"}
ndarray = "0.13.0"
rand = "0.7.3"
maplit = "1.0.2"
serde ={ version= "1.0.104" ,features = ["derive"]}
lazy_static = "1.4.0"