[package]
name = "executor"
version = "0.2.2"
authors = ["sam <sunhaoyl@outlook.com>"]
edition = "2018"

[lib]
path = "lib.rs"
name = "executor"

[[bin]]
name = "executor"
path = "executor.rs"

[features]
default = ["jit", "kcov"]
jit = []
syscall = []
kcov = []

[dependencies]
core = {path="../core"}
fots={path="../fots"}
serde ={ version= "1.0.110" ,features = ["derive"]}
bincode = "1.2.1"
rand = "0.7.3"
byteorder = "1.3.4"
tokio = {version="0.2.21",features=["full"]}
bytes = "0.5.4"
structopt = {version="0.3.7",default-features=true}
exitcode = "1.1.2"
thiserror = "1.0.9"
nix = "0.17.0"
os_pipe = "0.9.1"
byte-slice-cast = "0.3.5"
maplit = "1.0.2"
tcc = {package="libtcc", version="0.2.0"}
