[package]
name = "fots"
version = "1.0.0"
authors = ["sunhao <sunhao.th@gmail.com>"]
edition = "2018"
description = "Interface desciption language"
license = "Apache-2.0"

[dependencies]
pest = "2.1"
pest_derive = "2.1"
num-traits = "0.2"
prettytable-rs = "^0.8"
serde ={ version= "1.0" ,features = ["derive"]}
bincode = "1.3"
structopt = {version="0.3.7", default-features=true}
thiserror = "1.0"
colored = "2.0"

[dev-dependencies]
runtime-fmt = "0.4"

