[package]
name = "hl-fuzzer"
version = "0.0.0"
authors = ["Hao Sun <sunhaoyl@outlook.com>"]
edition = "2018"
description = "System call fuzzer of healer"
license = "Apache-2.0"

[lib]
name = "hl_fuzzer"
path = "lib.rs"

[[bin]]
name = "hl_fuzzer"
path = "main.rs"

[dependencies]
hlang = {version = "0.0.0", path = "../hlang"}
syscalls = {version = "0.0.0", path = "../syscalls"}
rustc-hash = "1.1" # for quick hashmap and hashset, secure cryptographic hash is unnecessary here
rand = "0.7"       # for generation and mutation. 
bv = "0.11.1"      # for mem mark in pointer type generation.

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "gen"
harness = false
