[package]
name = "hl-fuzzer"
version = "0.0.0"
authors = ["Hao Sun <sunhaoyl@outlook.com>"]
edition = "2018"
description = "System call fuzzer of healer"
license = "Apache-2.0"

[lib]
name = "hl_fuzzer"
path = "lib.rs"

[[bin]]
name = "hl-fuzzer"
path = "main.rs"

[dependencies]
hlang = {version = "0.0.0", path = "../hlang"}
syscalls = {version = "0.0.0", path = "../syscalls"}
rustc-hash = "1.1" # for quick hashmap and hashset, secure cryptographic hash is unnecessary here
rand = "0.8"       # for generation and mutation. 
bv = "0.11.1"      # for mem mark in pointer type generation.
bytes = "1.0"      # for serialization of prog.
iota = "0.2"       # for constant calculation.
tokio = {version = "1.0", features = ["rt", "fs", "io-util"]} # for background io.
shared_memory = "0.11" # for qemu ivshmem.
log = "0.4" 
thiserror = "1.0"
affinity = "0.1"

[dev-dependencies]  
criterion = "0.3"

[[bench]]
name = "gen"
harness = false
