[package]
name = "hlang"
version = "0.0.0"
authors = ["Hao Sun <sunhaoyl@outlook.com>"]
edition = "2018"
description = "System call specification of healer"
license = "Apache-2.0"

[lib]
name = "hlang"
path = "lib.rs"

[dependencies]
nom = "5.1.2"
nom_locate = "2.1.0"
ansi_term = "0.12"
rustc-hash = "1.1.0"
