[package]
name = "syscalls"
version = "0.0.0"
authors = ["Hao Sun <sunhaoyl@outlook.com>"]
edition = "2018"
description = "System calls of healer"
license = "Apache-2.0"

[lib]
name = "syscalls"
path = "lib.rs"

[features]
default = ["amd64-linux"]
amd64-linux = []
_386-linux = []
arm64-linux = []
arm-linux = []
mips64le-linux = []
riscv64-linux = []
s390x-linux = []
amd64-akaros = []
_386-freebsd = []
amd64-freebsd = []
amd64-fuchsia = []
arm64-fuchsia = []
amd64-netbsd = []
amd64-openbsd = []
arm-trusty = []
amd64-windows = []

[dependencies]
hlang = {version = "0.0.0", path = "../hlang"}
