[package]
name = "healer_alloc"
description = "Healer allocator"
authors = ["Hao Sun <sunhao.th@gmail.com>"]
version = "0.1.0"
edition = "2018"

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator", "tikv-jemalloc-ctl", "tikv-jemalloc-sys"]
snmalloc = ["snmalloc-rs"]

[dependencies.tikv-jemallocator]
version = "0.4"
optional = true
features = ["unprefixed_malloc_on_supported_platforms"]

[dependencies.tikv-jemalloc-sys]
version = "0.4"
optional = true

[dependencies.tikv-jemalloc-ctl]
version = "0.4"
optional = true

[dependencies.tcmalloc]
version = "0.3"
optional = true
features = ["bundled"]

[dependencies.mimalloc]
version = "0.1"
optional = true
default-features = false

[dependencies.snmalloc-rs]
version = "0.2"
optional = true