[package]
name = "mutate_prog"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "mutate-prog"
path = "src/main.rs"

[dependencies]
healer_core = {path = "../../healer_core"}
syz_wrapper = {path = "../../syz_wrapper"}
healer_alloc = {path = "../../healer_utils/healer_alloc"}
rand = {version = "0.8", features = ["small_rng"]}
env_logger = "0.9"
log = "0.4"

[dependencies.clap]
version = "3.0.0-beta.2"
features = [ "suggestions", "color" ]